2006-05-23  Brian Warner  <warner@lothar.com>

	* docs/buildbot.texinfo (Change Sources): mention hg_buildbot.py,
	give a quick mapping from VC system to possible ChangeSources

2006-05-22  Brian Warner  <warner@lothar.com>

	* docs/buildbot.texinfo (Build Properties): explain the syntax of
	property interpolation better

	* README (INSTALLATION): remove old '-v' argument from recommended
	trial command line

	* docs/buildbot.texinfo (ShellCommand): add docs for description=
	and descriptionDone= arguments. Thanks to Niklaus Giger for the
	patch. SF#1475494.

	* buildbot/slave/commands.py (SVN.parseGotRevision._parse): use
	'svnversion' instead of grepping the output of 'svn info', much
	simpler and avoids CR/LF problems on windows. Thanks to Olivier
	Bonnet for the suggestion.
	(SVN.parseGotRevision): oops, older verisons of 'svnversion'
	require the WC_PATH argument, so run 'svnversion .' instead.

	* buildbot/interfaces.py (IChangeSource): methods in Interfaces
	aren't supposed to have 'self' in their argument list

2006-05-21  Brian Warner  <warner@lothar.com>

	* buildbot/process/step.py (ShellCommand.start): make
	testInterpolate pass. I was passing the uninterpolated command to
	the RemoteShellCommand constructor
	(ShellCommand._interpolateProperties): oops, handle non-list
	commands (i.e. strings with multiple words separated by spaces in
	them) properly, instead of forgetting about them.

	* buildbot/test/test_properties.py (Run.testInterpolate): new test
	to actually try to use build properties in a real build. This test
	fails.
	* buildbot/test/runutils.py (RunMixin.requestBuild): utility methods
	to start and evaluate builds

	* buildbot/test/test__versions.py: add a pseudo-test to record
	what version of Twisted/Python/Buildbot are running. This should
	show up at the beginning of _trial_tmp/test.log, and exists to help
	debug other problems.

	* buildbot/status/html.py (Waterfall): add 'robots_txt=' argument,